add class remove and add functions.

--- a/fish.html
+++ b/fish.html
@@ -2,9 +2,15 @@
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Fish. What are they?</title>
   </head>
   <body>
+    <button class="btn btn-success" id="light">LightDark</button>
+    <button class="btn btn-warning" id="Dark">DarkLight</button>
     <h1>what are <span class="fishhype">fish</span>?</h2>
       <div class="important">
         <h2>We've all heard of them, but where does one find these elusive creatures called fish?</h2>
